# CMakeList.txt : CMake project for 06_Structures_Classes, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (Cpp_vs_Java "02_Expressions/1_0_0_Cpp_vs_Java.cpp")
add_executable (Greetings "02_Expressions/1_0_1_Greetings.cpp")


# TODO: Add tests and install targets if needed.
